<resources>
    <string name="app_name">Family Map</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port:</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signInButton">Sign In</string>
    <string name="registerButton">Register</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="family_map_default">Click on a marker to see event details</string>
    <string name="personActivityFirstName">First Name</string>
    <string name="personActivityLastName">Last Name</string>
    <string name="personActivityGender">Gender</string>
    <string name="lifeEventsTitle">LIFE EVENTS</string>
    <string name="immediateFamilyTitle">FAMILY</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="spouse">Spouse</string>
    <string name="child">Child</string>

    <string name="searchTitle">Search</string>
    <string name="settingsTitle">Settings</string>

    <string name="lifeStoryLines">Life Story Lines</string>
    <string name="showLifeStorySettings">SHOW LIFE STORY LINES</string>
    <string name="familyTreeLines">Family Tree Lines</string>
    <string name="showFamilyTreeLines">SHOW FAMILY TREE LINES</string>
    <string name="spouseLines">Spouse Lines</string>
    <string name="showSpouseLines">SHOW SPOUSE LINES</string>
    <string name="fathersSideFilter">Father\'s Side</string>
    <string name="filterFathersSideSetting">FILTER BY FATHERS SIDE OF FAMILY</string>
    <string name="mothersSideFilter">Mother\'s Side</string>
    <string name="filterMothersSideSetting">FILTER BY MOTHERS SIDE OF FAMILY</string>
    <string name="maleEventsFilter">Male Events</string>
    <string name="femaleEventsFilter">Female Events</string>
    <string name="filterGenderSetting">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout">Logout</string>
    <string name="logoutView">RETURN TO LOGIN SCREEN</string>
</resources>