<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:stretchColumns="3"
    tools:context=".userinterface.fragments.LoginFragment">

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/server_host"/>

        <EditText
            android:id="@+id/serverHostField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/server_port"/>

        <EditText
            android:id="@+id/serverPortField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/user_name"/>

        <EditText
            android:id="@+id/userNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="textPassword"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/first_name"/>

        <EditText
            android:id="@+id/firstNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/last_name"/>

        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/gender" />
        <RadioGroup
            android:id="@+id/RadioGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maleRB"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/femaleRB"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/female" />

        </RadioGroup>


    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/signInButton"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerButton" />
    </LinearLayout>
</TableLayout>